syntax = "proto3";
package kratos.api;

option go_package = "ralation-service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;
  Service service = 4;
  Elasticsearch elasticsearch = 5;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message UserService {
    string endpoint =1;
  }
  Database database = 1;
  Redis redis = 2;
  UserService user_service = 3;
}

message Registry {
  message Consul {
    string addr = 1;
  }
  Consul consul = 1;
}
message Service {
  string name = 1;     // ✅ 服务名
  string version = 2;  // ✅ 可选：版本
}
message Elasticsearch{
  repeated string addresses = 1;
  string index = 2;
}
